version 0.4.1 to 0.5.0
----------------------
* rearrange modules in factor sub-package.
* fix a bug of issquare function in arith1.
* fix a bug of e3 function in equation.
* move zassenhaus.combinationIndexGenerator to combinatorial.
* add functions coprime and pairwise_coprime to gcd.
* add a function log to arith1.
* add a method smith to matrix.IntegerMatrix.
* add functions fallingfactorial, risingfactorial, multinomial and partitionGenerator to combinatorial.

version 0.4.0 to 0.4.1
----------------------
* fix a bug of Schoof's method, EC.point, etc. in elliptic.
* fix a bug of integrate method in polynomial.
* fix a bug of e3_Fp function in equation.
* move elliptic.divi to factor.AllDivisors.
* rename arith1.sqroot to modsqrt and remove resembles in factor sub-package.
* move vp from prime to arith1 and remove factor.factor.ord.
* remove dependency on factor.trialDivision from prime.
* move issquare from factor to arith1.
* add a function getRing in ring.
* add a function mpqsfind in factor.mpqs.
* add a method order to finitefield.FinitePrimeFieldElement.
* add generator_eratosthenes to prime (EXPERIMENTAL).

version 0.3.1 to 0.4.0
----------------------
* add new modules equation providing a root finding methods and zassenhaus providing factorization of integer coefficient polynomials.
* fix some bugs in factor.factor and polynomial.
* add a method to culculate Mordel-Weil group structure of elliptic curve over finite fields. 
* add a function floorpowerroot in arith1.
* add functions bernoulli and catalan in combinatorial.
* add a function PrimePowerTest in factor.factor.
* add a function sigma in multiplicative.

version 0.3.0 to 0.3.1
----------------------
* fix import problem, and include finitefield.py mistakenly missing in 0.3.0.

version 0.2.1 to 0.3.0
----------------------
* create a new module multiplicative.py with euler and moebius
  from arith1.py to avoid circular import.

version 0.2.0 to 0.2.1
----------------------