@@ -1,4 +1,4 @@
-Copyright (c) 2003-2005, NZMATH development group
+Copyright (c) 2003-2006, NZMATH development group
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
