@@ -1,4 +1,4 @@
-NZMATH 0.4.1
+NZMATH 0.5.0
 ============
 
 Introduction
@@ -7,7 +7,7 @@ Introduction
 NZMATH is a Python based number theory oriented calculation system.
 It is developed at Tokyo Metropolitan University.
 
-The version 0.4.1 is an enhancement release.
+The version 0.5.0 is an enhancement release.
 It is still on an early stage of development, and the API can be
 changed with versions.
 
@@ -18,25 +18,25 @@ To install NZMATH on your computer, you must have Python 2.3 or
 better.  If you don't have a copy of Python, please install it first.
 Python is available from http://www.python.org/ .
 
-The next step is to expand the NZMATH-0.4.1.tar.gz.  The way to do it
+The next step is to expand the NZMATH-0.5.0.tar.gz.  The way to do it
 depends on your operating system.  On the systems with recent GNU tar,
 you can do it with a single command::
 
- % tar xf NZMATH-0.4.1.tar.gz
+ % tar xf NZMATH-0.5.0.tar.gz
 
 where, % is the command line prompt.  Or with standard tar, you can do
 it as::
 
- % gzip -cd NZMATH-0.4.1.tar.gz | tar xf -
+ % gzip -cd NZMATH-0.5.0.tar.gz | tar xf -
 
-Then, you have a child directory named NZMATH-0.4.1.
+Then, you have a child directory named NZMATH-0.5.0.
 
 The third step is the last step, to install NZMATH to the standard
 python path. Usually, this means to write files to somewhere under
 /usr/lib or /usr/local/lib, and thus you have to have appropriate
 write permission.  Typically, do as the following::
 
- % cd NZMATH-0.4.1
+ % cd NZMATH-0.5.0
  % su
  # python setup.py install
 
@@ -67,4 +67,4 @@ detail.
 
 .. _LICENSE.txt: LICENSE.txt
 
-Copyright (c) 2003-2005, NZMATH development group, all right reserved.
+Copyright (c) 2003-2006, NZMATH development group, all right reserved.
