@@ -1,1 +1,1 @@
-../__init__.py ../arith1.py ../bigrandom.py ../combinatorial.py ../elliptic.py ../equation.py ../finitefield.py ../gcd.py ../imaginary.py ../integerResidueClass.py ../lattice.py ../matrix.py ../multiplicative.py ../polynomial.py ../prime.py ../rational.py ../rationalFunction.py ../real.py ../ring.py ../vector.py ../zassenhaus.py ../factor/__init__.py ../factor/factor.py ../factor/mpqs.py ../factor/trialdivision.py CHANGES.txt HISTORY.txt LICENSE.txt README.txt tutorial.txt MANIFEST.in Makefile setup.py target.files
+../__init__.py ../arith1.py ../bigrandom.py ../combinatorial.py ../elliptic.py ../equation.py ../finitefield.py ../gcd.py ../group.py ../imaginary.py ../integerResidueClass.py ../lattice.py ../matrix.py ../multiplicative.py ../permute.py ../polynomial.py ../prime.py ../quad.py ../rational.py ../rationalFunction.py ../real.py ../ring.py ../vector.py ../zassenhaus.py ../factor/__init__.py ../factor/find.py ../factor/methods.py ../factor/misc.py ../factor/mpqs.py ../factor/util.py CHANGES.txt HISTORY.txt LICENSE.txt README.txt tutorial.txt MANIFEST.in Makefile setup.py target.files
